# Study-ITK

GeodesicActiveContourLevelSet/: CMakeLists.txt  main.cpp
HelloWorld/: CMakeLists.txt  main.cpp
ImageResliceExample/: CMakeLists.txt  ImageResliceExample.cpp
ReadImage/: CMakeLists.txt  main.cpp
VisitPixel/: CMakeLists.txt  main.cpp
